--- a/index.html
+++ b/index.html
@@ -5,4 +5,6 @@ Satdhara Adventure
 </title>
 <head>
 <body bgcolor="skyblue">
+  <centre> WelCome <br> to<br> Satdhara Adventure </centre>
 </body>
+
