--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ Satdhara Adventure
 </title>
 <head>
 <body bgcolor="skyblue">
-  <centre> WelCome <br> to<br> Satdhara Adventure </centre>
+  <center> WelCome <br> to<br> Satdhara Adventure </center>
 </body>
 
