--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@ Satdhara Adventure
 </title>
 <head>
 <body bgcolor="skyblue">
-  <center> <botom>WelCome <br> to<br> Satdhara Adventure</botom> </center>
+  <center> <bottom>WelCome <br> to<br> Satdhara Adventure</bottom> </center>
 </body>
 
