--- a/index.html
+++ b/index.html
@@ -72,11 +72,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <li class="nav-item">
                                 <a class="nav-link" href="contact.html">contact</a>
                             </li>
-                            <li>
-                                <button type="button" class="btn btn-primary ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
-                                    Login
-                                </button>
-                            </li>
+                            
                         </ul>
                     </div>
 
@@ -438,7 +434,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <div class="fv3-contact my-3">
                         <span class="fas fa-phone-volume mr-2"></span>
-                        <p>+91 945 901 6127, +91 7018002712</p>
+			    <p>+91 945 901 6127</p>
+			    <span class="fas fa-phone-volume mr-2"></span>
+			    <p>+91 701 800 1712</p>
+			    <span class="fas fa-phone-volume mr-2"></span>
+			    <p>+91 821 975 0881</p>
                     </div>
                     <div class="fv3-contact">
                         <span class="fas fa-envelope-open mr-2"></span>
