--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <a class="nav-link" href="contact.html">contact</a>
                         </li>
                         <li>
-                            <button type="button" class="btn btn-primary ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
-                                Login
-                            </button>
+                            
                         </li>
                     </ul>
                 </div>
@@ -263,7 +261,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </div>
                         <div class="fv3-contact my-3">
                             <span class="fas fa-phone-volume mr-2"></span>
-                            <p>+91 945 901 6127</p>
+                            <p>+91 945 901 6127</p><br>
+			    <span class="fas fa-phone-volume mr-2"></span>
+			    <p>+91 701 800 1712</p><br>
+			    <span class="fas fa-phone-volume mr-2"></span>
+			    <p>+91 821 975 0881</p>
                         </div>
                         <div class="fv3-contact">
                             <span class="fas fa-envelope-open mr-2"></span>
@@ -322,7 +324,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </button>
                 </div>
                 <div class="modal-body">
-                    <form action="#" method="post">
+                    <form method="POST" action="https://formspree.io/softlesweb@gmail.com">
                         <div class="form-group">
                             <label for="recipient-name" class="col-form-label">Email</label>
                             <input type="email" class="form-control" placeholder=" " name="email" id="usermail" required="">
