--- a/contact.html
+++ b/contact.html
@@ -188,10 +188,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <!-- contact details grid2-->
                     <div class="address address-mdl col-md-4 text-md-center">
                         <h5 class="pb-3">phone</h5>
-                        <p>
-                            +91 945 901 6127</p>
-                        <p>
-                            </p>
+                        
+                             <p>+91 945 901 6127</p><br>
+			    <span class="fas fa-phone-volume mr-2"></span>
+			    <p>+91 701 800 1712</p><br>
+			    <span class="fas fa-phone-volume mr-2"></span>
+			    <p>+91 821 975 0881</p>
+                        
                     </div>
                     <!-- contact details grid3 -->
                     <div class="address col-md-4 text-md-right mt-md-0 mt-3">
