--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
                     <h1>
                         <a class="navbar-brand text-white" href="index.html">
-                                <img src="images/ok.png" class="img-fluid" alt="Responsive image" / width="270px">
+                                <img src="images/ok.png" class="img-fluid" alt="Responsive image" width="270px">
                         </a>
                     </h1>
                     <button class="navbar-toggler ml-md-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -72,9 +72,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <a class="nav-link" href="contact.html">contact</a>
                             </li>
                             <li>
-                                <button type="button" class="btn btn-primary ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
-                                    Login
-                                </button>
                             </li>
                         </ul>
                     </div>
@@ -379,7 +376,11 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         </div>
                         <div class="fv3-contact my-3">
                             <span class="fas fa-phone-volume mr-2"></span>
-                            <p>+91 945 901 6127</p>
+                             <p>+91 945 901 6127</p><br>
+			    <span class="fas fa-phone-volume mr-2"></span>
+			    <p>+91 701 800 1712</p><br>
+			    <span class="fas fa-phone-volume mr-2"></span>
+			    <p>+91 821 975 0881</p>
                         </div>
                         <div class="fv3-contact">
                             <span class="fas fa-envelope-open mr-2"></span>
